# Complete_RAG

./: Orchestrator.ipynb  mobile.ipynb  pyproject.toml  webtrigger.js
0_Dataingestion/: 2_dataparsing.ipynb  dataingestion.ipynb
0_Dataingestion/1_vectore_embedding.ipynb/: llmcheck.ipynb  vectorembedding.ipynb
0_Dataingestion/2_vector_Db/: 0.Chroma_DB.ipynb  doc_0.txt  doc_2.txt  doc_4.txt
0_Dataingestion/2_vector_Db/Chroma_DB/: chroma.sqlite3
0_Dataingestion/2_vector_Db/data/: doc_1.txt  doc_3.txt
0_Dataingestion/data/textfiles/: java_intro.txt  python_intro.txt
2_faiss/: 2-faiss.ipynb
2_faiss/faiss_index/: index.faiss  index.pkl
3_semanticchunking/: 3_semanticchunkings.ipynb
hybridmethodsearch/: denseandsparse.ipynb  mmr.ipynb  reranking.ipynb  sample.txt  sample_dataset.txt
langgrapgh/: AgenticRAG.ipynb  DataClasess.ipynb  ReAct.ipynb  ReactAgent.ipynb  basicbot.ipynb  basiclanggraph.ipynb  chatbotwithdifferenttools.ipynb
